--- a/share.html
+++ b/share.html
@@ -40,7 +40,7 @@
                         A0B41C6
                     </a>
 
-                    <img src="/assets/img/Vector.svg" alt="share button">
+                    <img src="./assets/img/Vector.svg" alt="share button">
 
                 </div>
             </div>
@@ -92,7 +92,7 @@
                             A0B41C6
                         </a>
                         <a href="#popup">
-                            <img src="/assets/img/Vector.svg" alt="share button">
+                            <img src="./assets/img/Vector.svg" alt="share button">
                         </a>
                     </div>
 
