--- a/confermation.html
+++ b/confermation.html
@@ -31,7 +31,9 @@
                     <div class="red-bar"></div>
                 </div>
             </div>
-
+            <div class="heading-text text-conf">
+                <h2>this is your character and your gun would  you like to continue</h2>
+            </div>
             <div class="gun-imag1">
                 <img src="./assets/img/38a0105ec2e74c59b62d59cd4cba87d2283a5ecf.png" alt="gun">
                 <p>Assault Rifle</p>
