adding the README file

--- a/character.html
+++ b/character.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="container-info">
-            <div class="frame-image"><img src="./assets/img/Vector 47.svg" alt="frame"></div>
+            <div class="frame-image"><img src="./asseg" alt="frame"></div>
             <div class="percentage">
                 <div class="percentage-texts">
                     <p>laoding</p>
